# python-aws-terraform

./: .gitignore  README.md
backend/: .dockerignore  .env.development  .env.production  .env.qa  .env.staging  .flake8  .gitignore  README.md  deploy_fargate.py  deploy_lambda.py  fargate.Dockerfile  lambda.Dockerfile  pyproject.toml
backend/backend/: .gitignore  alerting.py  backend_fargate.py  backend_lambda.py  celery_worker.py  config.py  config_deps.py  config_helpers.py  env.py  log_utils.py  metrics.py  oauth.py  posthog_helper.py  secrets_util.py
backend/backend/api/: app.py  cors.py  monitoring.py  request_context_deps.py  server_timing_middleware.py
backend/backend/api/auth/: integration.py  permission.py
backend/backend/api/gate/: gate.py
backend/backend/api/params/: abstract_param.py
backend/backend/api/routers/: custom_router.py  (+5 more)
backend/backend/command/: account_create.py
backend/backend/db/: __init__.py  accounts_db.py  mongo_db.py  mongo_db_session.py  mongo_setup.py  user_account_access_db.py
backend/backend/scripts/: account_create.py  console.py  ensure_connection_works.py  give_email_access_to_account.py  helpers.py  initialize_db.py  initialize_local_db.py  set_gate.py  table_op.py  test_helpers.py
backend/local_services/: docker-compose.yaml  local_mongo.Dockerfile
backend/tests/: mock_auth.py  mongo_db_test_base.py  simple_env_test_base.py  test_api_base.py  test_models.py
backend/tests/api/: test_api.py  test_settings_api.py
backend/tests/scripts/: test_account_create.py  test_give_email_access_to_account.py  test_table_op.py
(+69 files in other folders)
